# aoc

aoc2024/: .gitignore  Makefile  aoc2024.opam  dune-project
aoc2024/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  dune  util.ml
