(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github wkm/aoc))

(authors "wkm")

(maintainers "wkm")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core async ocamlformat)
 (tags
  (topics "to describe" your project)))
